refactor: timeline component use id as input

--- a/src/app/feature/non-authorized/timeline/timeline-page.component.html
+++ b/src/app/feature/non-authorized/timeline/timeline-page.component.html
@@ -1,7 +1,9 @@
 <app-shared-layout>
-  <div class="flex">
-    <div class="flex-auto">02</div>
-    <div class="w-72 flex-none border border-warning">
+  <div class="flex gap-4 p-4">
+    <div class="flex-auto">
+      <app-shared-timeline [timelineId]="1" />
+    </div>
+    <div class="w-72 flex-none">
       @if (timelineAccount(); as account) {
         <app-shared-account-view [account]="account" />
       }
