--- a/src/app/feature/non-authorized/develop/develop-page.component.html
+++ b/src/app/feature/non-authorized/develop/develop-page.component.html
@@ -8,11 +8,11 @@
         <app-shared-account-view [account]="withoutAvatar()" />
         <app-shared-account-view
           [account]="withoutAvatar()"
-          [isSelected]="true" />
+          extraContainerClasses="bg-warning" />
         <app-shared-account-view [account]="withoutAvatarWithAvatar()" />
         <app-shared-account-view
           [account]="withoutAvatarWithAvatar()"
-          [isSelected]="true" />
+          extraContainerClasses="bg-warning" />
       </div>
     </div>
 
