--- a/src/app/feature/non-authorized/index/index-page.component.html
+++ b/src/app/feature/non-authorized/index/index-page.component.html
@@ -25,21 +25,9 @@
     <app-shared-content-title title="Our timeline" class="text-success" />
   </div>
   <div>
-    <div class="overflow-hidden px-4" [class.h-192]="isCollapsed()">
-      <app-timeline [timeline]="projectTimeline()"></app-timeline>
-    </div>
+    <app-shared-timeline [timelineId]="1" [limit]="3" />
     <p class="my-4 rounded-b-xl bg-base-300 p-4 text-center">
-      <a
-        class="link"
-        (click)="toggleCollapse()"
-        tabindex="0 "
-        (keypress.enter)="toggleCollapse()">
-        @if (isCollapsed()) {
-          show more
-        } @else {
-          hide
-        }
-      </a>
+      <a class="link" href="/timeline/1">show more</a>
     </p>
   </div>
   <div class="mt-4 hidden rounded-lg bg-base-100 p-4">
