fix: donot show message about empty events if api returns an error

--- a/src/app/feature/timeline/share/timeline/timeline.component.html
+++ b/src/app/feature/timeline/share/timeline/timeline.component.html
@@ -17,10 +17,12 @@
       <ng-content />
     </app-timeline-events-list>
   } @else {
-    <div role="alert" class="alert alert-info">
-      <ng-icon name="saxInformationOutline" size="32" />
-      <span>There are no events.</span>
-    </div>
+    @if (!error()) {
+      <div role="alert" class="alert alert-info">
+        <ng-icon name="saxInformationOutline" size="32" />
+        <span>There are no events.</span>
+      </div>
+    }
   }
 }
 
