fix: donot show message about empty events if events is loading

--- a/src/app/feature/timeline/share/timeline/timeline.component.html
+++ b/src/app/feature/timeline/share/timeline/timeline.component.html
@@ -17,7 +17,7 @@
       <ng-content />
     </app-timeline-events-list>
   } @else {
-    @if (!error()) {
+    @if (!error() && !isLoading()) {
       <div role="alert" class="alert alert-info">
         <ng-icon name="saxInformationOutline" size="32" />
         <span>There are no events.</span>
