refactor: add new timeline componetn to user dashboard

--- a/src/app/feature/authorized/dashboard/my-page.component.html
+++ b/src/app/feature/authorized/dashboard/my-page.component.html
@@ -22,6 +22,14 @@
 
           <app-edit-event />
 
+          <div class="hidden">
+            <app-shared-timeline
+              [timelineId]="activeTimeline()!.id"
+              [canEditEvent]="true"
+              (delete)="deleteEvent($event)"
+              (edit)="editEvent($event)" />
+          </div>
+
           <app-timeline
             [timeline]="timeline()"
             (filterByTag)="filterByTag($event)"
