fix: fix showing edit menu

--- a/src/app/feature/authorized/dashboard/my-page.component.html
+++ b/src/app/feature/authorized/dashboard/my-page.component.html
@@ -24,7 +24,7 @@
 
           <app-shared-timeline
             [timelineId]="activeTimeline()!.id"
-            [canEditEvent]="true"
+            [isEditable]="true"
             (delete)="deleteEvent($event)"
             (edit)="editEvent($event)" />
 
