--- a/src/app/feature/timeline/components/list/list.component.html
+++ b/src/app/feature/timeline/components/list/list.component.html
@@ -14,7 +14,7 @@
         class="item-content w-full place-items-start overflow-hidden rounded-xl bg-base-100"
         [class.opacity-20]="event.loading">
         <app-shared-timeline-event-content [event]="event" />
-        @if (canEditEvent()) {
+        @if (isEditable() && !event.loading) {
           <app-timeline-event-menu
             class="absolute -bottom-2 right-2 lg:hidden"
             [timelineEvent]="{ id: event.id }"
@@ -22,7 +22,7 @@
             (edit)="edit.emit($event)" />
         }
       </div>
-      @if (canEditEvent()) {
+      @if (isEditable() && !event.loading) {
         <div class="item-menu hidden h-full w-full lg:block">
           <div
             class="mt-10 h-full w-full duration-100 hover:opacity-100 lg:opacity-0">
