--- a/src/app/feature/authorized/dashboard/edit-event/edit-event.component.html
+++ b/src/app/feature/authorized/dashboard/edit-event/edit-event.component.html
@@ -1,4 +1,4 @@
-@if (editEvent(); as event) {
+@if (editedEvent(); as event) {
   @if (previewEvent(); as preview) {
     <ul
       class="timeline timeline-vertical timeline-snap-icon mb-8 max-md:timeline-compact">
