--- a/src/app/feature/timeline/share/timeline/timeline.component.html
+++ b/src/app/feature/timeline/share/timeline/timeline.component.html
@@ -17,7 +17,7 @@
       [events]="events"
       [isEditable]="isEditable()"
       (delete)="delete.emit($event)"
-      (edit)="edit.emit($event)" />
+      (edit)="editEvent($event)" />
   } @else {
     @if (!error() && !isLoading()) {
       <div role="alert" class="alert alert-info">
