--- a/src/app/feature/events/edit-event-form/edit-event-form.component.scss
+++ b/src/app/feature/events/edit-event-form/edit-event-form.component.scss
@@ -1,4 +1,4 @@
-@use '../../../../../../assets/css/global' as g;
+@use '../../../../assets/css/global' as g;
 
 .edit-form {
   @apply timeline-box relative mt-4 bg-base-300 pt-0 lg:mt-0;
