fix: remove @apply from scss

--- a/src/app/feature/account/features/feature-stage/feature-stage.component.html
+++ b/src/app/feature/account/features/feature-stage/feature-stage.component.html
@@ -1,8 +1,8 @@
 <div class="tooltip w-full" [attr.data-tip]="view()?.title">
   <div class="stage stage-{{ view()?.stage }} flex w-full gap-1 px-4 py-4">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
+    <span class="h-2 flex-grow rounded-box bg-base-300"></span>
+    <span class="h-2 flex-grow rounded-box bg-base-300"></span>
+    <span class="h-2 flex-grow rounded-box bg-base-300"></span>
+    <span class="h-2 flex-grow rounded-box bg-base-300"></span>
   </div>
 </div>
