--- a/src/app/feature/events/edit-event-form/edit-event-form.component.html
+++ b/src/app/feature/events/edit-event-form/edit-event-form.component.html
@@ -1,5 +1,5 @@
 <form
-  class="edit-form"
+  class="edit-form timeline-box bg-base-300 lg:mt-0"
   [class.skeleton]="loading()"
   (submit)="formSubmit($event)"
   method="post"
