--- a/src/app/feature/ui/table-of-contents/components/table-of-contents/table-of-contents.component.scss
+++ b/src/app/feature/ui/table-of-contents/components/table-of-contents/table-of-contents.component.scss
@@ -2,14 +2,13 @@
   transition: 0.5s ease-out all;
 
   &.active {
-    @apply border-r-4 border-primary;
     opacity: 1;
 
     a {
-      @apply font-medium;
+      font-weight: 500;
     }
   }
   a {
-    @apply font-light;
+    font-weight: 300;
   }
 }
