--- a/src/app/feature/events/edit-event-form/edit-event-form.component.scss
+++ b/src/app/feature/events/edit-event-form/edit-event-form.component.scss
@@ -1,16 +1,18 @@
 @use '../../../../assets/css/global' as g;
 
 .edit-form {
-  @apply timeline-box relative mt-4 bg-base-300 pt-0 lg:mt-0;
+  margin-top: 1rem;
+  padding-top: 0;
+  position: relative;
 
   .form-tab-content {
-    @apply hidden h-92;
-
+    height: 23rem;
+    display: none;
     animation: backInRight;
     animation-duration: g.$animation-duration;
 
     &.active {
-      @apply block;
+      display: block;
     }
   }
 }
