--- a/src/app/feature/ui/layout/components/notifications/notifications-container.component.html
+++ b/src/app/feature/ui/layout/components/notifications/notifications-container.component.html
@@ -1,8 +1,8 @@
-<div class="notification-container">
+<div class="notification-container fixed right-10 top-0 z-30 w-96 pe-4 pt-2">
   @for (message of messages(); track $index) {
     <div
       tabindex="0"
-      class="toast {{ message.type }}"
+      class="toast bg-base-300 {{ message.type }}"
       (click)="markRead.emit(message)"
       (keyup.escape)="markRead.emit(message)"
       (keyup.enter)="markRead.emit(message)">
