--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -13,6 +13,6 @@
 <app-notifications-container
   (markRead)="markRead($event)"
   [messages]="unreadMessages()" />
-<app-cookie-consent (consent)="cookieConsent($event)" />
+<app-cookie-consent />
 <app-modal-factory />
 <app-footer />
