--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+@plugin "daisyui" {
+  themes: pastel;
+}
+@plugin "daisyui/theme" {
+  name: 'gruvbox';
+  default: true; /* set as default */
+  prefersdark: true; /* set as default dark mode (prefers-color-scheme:dark) */
+  color-scheme: dark; /* color of browser-provided UI */
+
+  --color-base-100: oklch(31.09% 0.0034 48.62);
+  // --color-base-200: oklch(95% 0.03 240);
+  // --color-base-300: oklch(92% 0.04 240);
+  // --color-base-content: oklch(20% 0.05 240);
+
+  --color-primary: oklch(57.51% 0.0666 199.42);
+  --color-secondary: oklch(64.5% 0.0939 145.27);
+  --color-accent: oklch(62.17% 0.1707 45.81);
+  --color-neutral: oklch(24.08% 0.0049 219.67);
+  --color-info: oklch(89.41% 0.0566 89.24);
+  --color-success: oklch(75.55% 0.1078 137.68);
+  --color-warning: oklch(83.25% 0.1595 82.99);
+  --color-error: oklch(65.97% 0.2175 30.39);
+
+  // --color-primary-content: oklch(98% 0.01 240);
+  // --color-secondary: oklch(64.5% 0.0939 145.27);
+  // --color-secondary-content: oklch(98% 0.01 200);
+  // --color-accent: oklch(65% 0.25 160);
+  // --color-accent-content: oklch(98% 0.01 160);
+  // --color-neutral: oklch(50% 0.05 240);
+  // --color-neutral-content: oklch(98% 0.01 240);
+  // --color-info-content: oklch(98% 0.01 220); // --color-error-content: oklch(98% 0.01 30); // --color-error: oklch(65% 0.3 30); // --color-warning-content: oklch(20% 0.05 80); // --color-warning: oklch(80% 0.25 80); // --color-success-content: oklch(98% 0.01 140); // --color-success: oklch(65% 0.25 140);
+}
 
 @import url('animate.css');
 @import url('./assets/css/global.scss');
@@ -53,7 +83,7 @@ html.dark .hero {
 }
 
 html.light .hero {
-  @apply bg-base-300;
+  // @apply bg-base-300;
 }
 
 .collapsable {
