feat: show avatar

--- a/src/app/feature/non-authorized/timeline/timeline-page.component.html
+++ b/src/app/feature/non-authorized/timeline/timeline-page.component.html
@@ -14,7 +14,7 @@
             <span>{{ error() }}</span>
           </div>
         }
-        @if (timelineAccount(); as account) {
+        @if (timelineAccountView(); as account) {
           <div>
             <app-shared-account-view
               [account]="account"
