--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
 
 @import url('animate.css');
 @import url('./assets/css/global.scss');
@@ -53,7 +50,7 @@ html.dark .hero {
 }
 
 html.light .hero {
-  @apply bg-base-300;
+  // @apply bg-base-300;
 }
 
 .collapsable {
