--- a/src/app/feature/events/edit-event-form/upload-input/upload-input.component.html
+++ b/src/app/feature/events/edit-event-form/upload-input/upload-input.component.html
@@ -26,7 +26,7 @@
       <p>drop or click</p>
     }
     @if (previewImage()?.error) {
-      <p class="mt-4 font-bold text-error">{{ previewImage()?.error }}</p>
+      <p class="text-error mt-4 font-bold">{{ previewImage()?.error }}</p>
     }
   </div>
 </button>
