--- a/src/app/feature/non-authorized/develop/components/develop-content/develop-content.component.html
+++ b/src/app/feature/non-authorized/develop/components/develop-content/develop-content.component.html
@@ -1,4 +1,4 @@
-<div class="relative z-20 rounded-lg bg-base-200 shadow-xl shadow-base-300">
+<div class="bg-base-200 shadow-base-300 relative z-20 rounded-lg shadow-xl">
   <app-shared-hero>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
