--- a/src/app/feature/non-authorized/timeline/timeline-page.component.html
+++ b/src/app/feature/non-authorized/timeline/timeline-page.component.html
@@ -4,7 +4,7 @@
       <app-shared-timeline [timelineId]="timelineId()" />
     </div>
     <div class="lg:w-72 lg:flex-none">
-      <div class="relative rounded-xl bg-base-300 shadow-xl">
+      <div class="bg-base-300 relative rounded-xl shadow-xl">
         @if (loading()) {
           <div class="min-h-32"><app-shared-loader /></div>
         }
