--- a/src/app/feature/ui/table-of-contents/components/table-of-contents-container/table-of-contents-container.component.html
+++ b/src/app/feature/ui/table-of-contents/components/table-of-contents-container/table-of-contents-container.component.html
@@ -1,8 +1,8 @@
 @if (state().items.length > 0) {
   <div class="table-container absolute top-10 z-0 w-36" [class.open]="isOpen()">
     <div
-      class="rounded-r-xl bg-accent py-4 text-xl text-accent-content shadow-2xl shadow-black">
-      <div class="icon absolute cursor-pointer text-primary">
+      class="bg-accent text-accent-content rounded-r-xl py-4 text-xl shadow-2xl shadow-black">
+      <div class="icon text-primary absolute cursor-pointer">
         <ng-icon name="saxArrowSquareRightBold" size="48"></ng-icon>
       </div>
 
