--- a/src/app/feature/ui/table-of-contents/components/table-of-contents/table-of-contents.component.html
+++ b/src/app/feature/ui/table-of-contents/components/table-of-contents/table-of-contents.component.html
@@ -5,7 +5,7 @@
       [class.border-primary]="selected() === item.uuid"
       [class.border-r-4]="selected() === item.uuid"
       [class.default]="selected() !== item.uuid"
-      class="item overflow-hidden border-r-4 border-accent p-2 ps-4">
+      class="item border-accent overflow-hidden border-r-4 p-2 ps-4">
       <a
         tabindex="0"
         [href]="item.link"
