--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,9 +1,9 @@
 <app-header />
 <div
-  class="flex min-h-[calc(100vh-70px-64px)] place-content-center bg-base-100">
+  class="bg-base-100 flex min-h-[calc(100vh-70px-64px)] place-content-center">
   <div class="relative my-4 w-full">
     <div
-      class="relative z-10 h-full rounded-lg bg-base-200 shadow-xl shadow-base-300">
+      class="bg-base-200 shadow-base-300 relative z-10 h-full rounded-lg shadow-xl">
       <ng-content></ng-content>
     </div>
     <app-table-of-contents-container
