--- a/src/app/shared/ui/date-picker/date-picker.component.html
+++ b/src/app/shared/ui/date-picker/date-picker.component.html
@@ -1,4 +1,4 @@
-<div class="rounded-lg bg-base-100 px-2 pb-4 shadow">
+<div class="bg-base-100 rounded-lg px-2 pb-4 shadow">
   <div class="mb-2 flex items-center justify-between pt-2">
     <div class="join">
       <button class="btn btn-ghost join-item" (click)="toggleMonthSelector()">
