--- a/src/app/feature/account/share/view/account-view.component.html
+++ b/src/app/feature/account/share/view/account-view.component.html
@@ -1,5 +1,5 @@
 <div
-  class="flex cursor-pointer place-items-center justify-start gap-2 overflow-hidden rounded-xl bg-success text-success-content transition-all duration-300 ease-linear"
+  class="bg-success text-success-content flex cursor-pointer place-items-center justify-start gap-2 overflow-hidden rounded-xl transition-all duration-300 ease-linear"
   [ngClass]="extraContainerClasses()"
   (click)="accountClick.emit()"
   (keydown.enter)="accountClick.emit()"
@@ -9,7 +9,7 @@
       class="w-12 bg-cover bg-no-repeat"
       [class.with-avatar]="account().avatar"
       [style.background]="avatar()">
-      <span class="text-2xl text-neutral-content">
+      <span class="text-neutral-content text-2xl">
         {{ account().firstLetter }}
       </span>
     </div>
