--- a/src/app/feature/non-authorized/develop/develop-page.component.html
+++ b/src/app/feature/non-authorized/develop/develop-page.component.html
@@ -33,7 +33,7 @@
     <div class="py-4" id="LayoutTesting">
       <h2 class="text-2xl">Layout testing</h2>
       <div class="mt-4 grid w-full grid-cols-1 gap-4">
-        <div class="screen relative bg-base-100">
+        <div class="screen bg-base-100 relative">
           <div
             class="content-container relative my-4 ms-4 w-[calc(100%-20rem)]">
             <app-develop-content />
@@ -43,7 +43,7 @@
               [isOpen]="true" />
           </div>
         </div>
-        <div class="screen relative bg-base-100">
+        <div class="screen bg-base-100 relative">
           <div
             class="content-container relative my-4 ms-4 w-[calc(100%-20rem)]">
             <app-develop-content />
