--- a/src/app/feature/non-authorized/index/index-page.component.html
+++ b/src/app/feature/non-authorized/index/index-page.component.html
@@ -26,11 +26,11 @@
   </div>
   <div>
     <app-shared-timeline [timelineId]="1" [limit]="3" />
-    <p class="my-4 rounded-b-xl bg-base-300 p-4 text-center">
+    <p class="bg-base-300 my-4 rounded-b-xl p-4 text-center">
       <a class="link" href="/timeline/1">show more</a>
     </p>
   </div>
-  <div class="mt-4 hidden rounded-lg bg-base-100 p-4">
+  <div class="bg-base-100 mt-4 hidden rounded-lg p-4">
     <app-shared-content-title title="Features" class="text-primary" />
   </div>
 </app-shared-layout>
