--- a/src/app/feature/timeline/components/list/list.component.html
+++ b/src/app/feature/timeline/components/list/list.component.html
@@ -1,5 +1,5 @@
 <ul
-  class="timeline timeline-vertical timeline-snap-icon overflow-hidden max-md:timeline-compact">
+  class="timeline timeline-vertical timeline-snap-icon max-md:timeline-compact overflow-hidden">
   @for (event of events(); track $index; let odd = $odd) {
     <li
       class="timeline-item mt-4"
@@ -11,13 +11,13 @@
       </div>
 
       <div
-        class="item-content timeline-end w-full place-items-start overflow-hidden rounded-xl bg-base-100"
+        class="item-content timeline-end bg-base-100 w-full place-items-start overflow-hidden rounded-xl"
         [class.lg:timeline-start]="!odd"
         [class.opacity-20]="event.loading">
         <app-shared-timeline-event-content [event]="event" />
         @if (isEditable() && !event.loading) {
           <app-timeline-event-menu
-            class="absolute -bottom-2 right-2 lg:hidden"
+            class="absolute right-2 -bottom-2 lg:hidden"
             [timelineEvent]="{ id: event.id }"
             (delete)="delete.emit($event)"
             (edit)="edit.emit($event)" />
