--- a/src/app/shared/content/modal/modal.component.html
+++ b/src/app/shared/content/modal/modal.component.html
@@ -1,7 +1,7 @@
 <dialog #modal class="modal">
   <div class="modal-box max-w-3xl">
     <form method="dialog">
-      <button class="btn btn-circle btn-ghost btn-sm absolute right-2 top-2">
+      <button class="btn btn-circle btn-ghost btn-sm absolute top-2 right-2">
         ✕
       </button>
     </form>
