--- a/src/app/shared/content/tabs/tabs.component.html
+++ b/src/app/shared/content/tabs/tabs.component.html
@@ -1,6 +1,6 @@
 <h2 class="form-tabs-title -mt-4 flex justify-center">
   <span
-    class="w-52 rounded-t-lg border border-base-200 border-l-base-300 border-r-base-300 border-t-base-300 bg-base-200 text-center">
+    class="border-base-200 border-l-base-300 border-r-base-300 border-t-base-300 bg-base-200 w-52 rounded-t-lg border text-center">
     {{ activeTab().title }}
   </span>
 </h2>
